objects/box__ItemMoveQueue__c/box__ItemMoveQueue__c.object-meta.xml
<CustomObject>
    <description>Queue of box items to move</description>
    <label>Item Move Queue</label>
    <nameField>
        <displayFormat>IMQ-{000000}</displayFormat>
        <label>Item Move Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Item Move Queue Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>