objects/box__ItemMoveQueue__c/fields/box__FileOrFolder__c.field-meta.xml
<CustomField>
    <fullName>box__FileOrFolder__c</fullName>
    <description>Is the item to be moved a file or a folder?</description>
    <label>FileOrFolder</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>File</fullName>
            </value>
            <value>
                <fullName>Folder</fullName>
                <default>true</default>
                <label>Folder</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>