objects/box__ItemMoveQueue__c/fields/box__ItemId__c.field-meta.xml
<CustomField>
    <fullName>box__ItemId__c</fullName>
    <description>box file or folder id of the item to be moved</description>
    <label>ItemId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>