objects/box__ItemMoveQueue__c/fields/box__NewParentId__c.field-meta.xml
<CustomField>
    <fullName>box__NewParentId__c</fullName>
    <description>Folder Id the file or folder will be reparented to.</description>
    <label>NewParentId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>